--- a/script/install
+++ b/script/install
@@ -2,7 +2,7 @@
 clear
 #--------------------------
 # SCRIPR SSH-PLUS
-# CANAL TELEGRAM: @scottsshd
+# CANAL TELEGRAM: @Al3xv1p
 #--------------------------
 
 # - Cores
